deployment/argocd_configurations/argocd_repo_server_gcp.yaml
# ArgoCD Repo Server Patch
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
     containers:
     - name: sops-plugin
       command: [/var/run/argocd/argocd-cmp-server] # Entrypoint should be Argo CD lightweight CMP server i.e. argocd-cmp-server
       image: <image:tag> # This can be off-the-shelf or custom-built image
       securityContext:
         runAsNonRoot: true
         runAsUser: 999
       volumeMounts:
         - mountPath: /var/run/argocd
           name: var-files
         - mountPath: /home/argocd/cmp-server/plugins
           name: plugins
         # Remove this volumeMount if you've chosen to bake the config file into the sidecar image.
         - mountPath: /home/argocd/cmp-server/config/plugin.yaml
           subPath: plugin.yaml
           name: sops-plugin-config
         # Starting with v2.4, do NOT mount the same tmp volume as the repo-server container. The filesystem separation helps
         # mitigate path traversal attacks.
         - mountPath: /home/argocd/google_key
           name: sa-gcr-key
           readOnly: true
         - mountPath: /tmp
           name: cmp-tmp
     volumes:
     - configMap:
         name: sops-plugin-config
       name: sops-plugin-config
     - name: sa-gcr-key
       secret:
         secretName: sa-gcr-key
     - emptyDir: {}
       name: cmp-tmp
